--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "dependencies": {
     "three": "^0.135.0",
+    "web-ifc": "^0.0.36",
     "web-ifc-viewer": "^1.0.209"
   }
 }
